utworzone repo dom1

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   </head>
   <body>
     <h1>Welcome to my page</h1>
+    <button class="button">Hello!</button>
+    <button class="button">Click!</button>
+    <button class="button">Zalukaj!</button>
+    <button class="button">Wejdz!</button>
+    <button class="button">Kliknij!</button>
     <script type="text/javascript" src="js/scripts.js"></script>
   </body>
 </html>
